--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 } 
 
 #score {
+  color: aliceblue;
   font-family: cursive;
   position: relative;
   right: 10%;
@@ -16,6 +17,7 @@
 }
 
 span{
+  color: aliceblue;
   font-family: cursive;
   position: relative;
   text-align: right;
@@ -28,6 +30,7 @@ span{
 }
 
 .div1{
+  color: aliceblue;
   font-family: cursive;
   font-size: 40px;
   width: 350px;
